--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@ body {
   justify-content: center;
   align-items: center;
   height: 80vh;
-  background-color: #181818;
+  background-image: url("imgs/Fundo.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 body header {
   display: flex;
@@ -13,21 +15,20 @@ body header {
 }
 body header #fotoPerfil {
   border-radius: 50%;
-  height: 150px;
-  width: 150px;
+  height: 10rem;
+  width: 10rem;
   margin-top: -180px;
 }
-body header #username {
+body header #username,
+body header #descricao {
   text-align: center;
   color: #FFF;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  filter: drop-shadow(0 0 0.75rem #202020);
 }
 body header #descricao {
-  text-align: center;
-  color: #555;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-top: -40px;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 body .container {
   margin-top: 40vh;
@@ -38,36 +39,8 @@ body .container {
   height: 50vh;
   width: 50vw;
 }
-body .container .itemLinkedIn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 8vh;
-  width: 40vw;
-  margin: 20px;
-  border-radius: 2px;
-  color: #525252;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-  transition: 0.5s;
-  background-color: #FFF;
-}
-body .container .itemGitHub {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 8vh;
-  width: 40vw;
-  margin: 20px;
-  border-radius: 2px;
-  color: #525252;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-  transition: 0.5s;
-  background-color: #FFF;
-}
+body .container .itemLinkedIn,
+body .container .itemGitHub,
 body .container .itemInstagram {
   display: flex;
   justify-content: center;
@@ -89,6 +62,7 @@ body .container .itemLinkedIn:hover {
   filter: drop-shadow(0 0 0.75em #00A0DC);
   color: #FFF;
   font-size: 21px;
+  opacity: 100%;
   transition: 0.5s;
 }
 body .container .itemLinkedIn:active {
@@ -108,6 +82,7 @@ body .container .itemGitHub:hover {
   filter: drop-shadow(0 0 0.75em #3b3b3b);
   color: #FFF;
   font-size: 21px;
+  opacity: 100%;
   transition: 0.5s;
 }
 body .container .itemGitHub:active {
@@ -127,6 +102,7 @@ body .container .itemInstagram:hover {
   filter: drop-shadow(0 0 0.75em #C13584);
   color: #FFF;
   font-size: 21px;
+  opacity: 100%;
   transition: 0.5s;
 }
 body .container .itemInstagram:active {
