--- a/styles.scss
+++ b/styles.scss
@@ -1,8 +1,8 @@
 $fontePadrao: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-$cinzaEscuro: #525252;
-$corLinkedIn: #0077B5;
-$corGitHub: #211F1F;
-$corInstagram: #FFF;
+$cinzaEscuroTexto: #525252;
+$corLinkedIn: linear-gradient(to right, #0077B5, #00BBFF);
+$corGitHub: linear-gradient(to right, #211F1F, #9F9F9F);
+$corInstagram: linear-gradient(to right, #405DE6, #5B51D8, #833AB4, #C13584, #E1306C, #FD1D1D, #F56040, #F77737, #FCAF45, #FFDC80);
 
 body {
     display: flex;
@@ -46,13 +46,16 @@ body {
         grid-template-columns: 1;
         grid-template-rows: 3;
         justify-content: center;
-
         height: 50vh;
         width: 50vw;
 
+        a {
+            text-decoration: none;
+        }
+
         .itemLinkedIn,
         .itemGitHub,
-        .itemInstagram{
+        .itemInstagram {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -60,63 +63,41 @@ body {
             width: 40vw;
             margin: 20px;
             border-radius: 2px;
-            color: $cinzaEscuro;
+            color: $cinzaEscuroTexto;
             font-family: $fontePadrao;
             font-size: 20px;
             font-weight: 600;
             transition: .5s;
             background-color: #FFF;
-            // opacity: 75%;
+        }
+
+        .itemLinkedIn:hover,
+        .itemGitHub:hover,
+        .itemInstagram:hover {
+            transform: scale(1.1, 1.1);
+            font-size: 21px;
+            opacity: 100%;
+            transition: .5s;
+            color: #FFF;
         }
 
         .itemLinkedIn:hover {
-            transform: scale(1.1, 1.1);
-            background: linear-gradient(to right, $corLinkedIn, #00A0DC);
-            filter: drop-shadow(0 0 0.75em #00A0DC);
-            color: #FFF;
-            font-size: 21px;
-            opacity: 100%;
-            transition: .5s;
-        }
-
-        .itemLinkedIn:active {
-            transform: scale(0.9, 0.9);
-        }
-
-        .itemLinkedIn::selection {
-            background-color: $corLinkedIn;
-            color: #FFF;
+            background: $corLinkedIn;
+            filter: drop-shadow(0 0 0.75em #00BBFF);
         }
 
         .itemGitHub:hover {
-            transform: scale(1.1, 1.1);
-            background: linear-gradient(to right, $corGitHub, #3b3b3b);
-            filter: drop-shadow(0 0 0.75em #3b3b3b);
-            color: #FFF;
-            font-size: 21px;
-            opacity: 100%;
-            transition: .5s;
-        }
-
-        .itemGitHub:active {
-            transform: scale(0.9, 0.9);
-        }
-
-        .itemGitHub::selection {
-            background-color: $corGitHub;
-            color: #FFF;
+            background: $corGitHub;
+            filter: drop-shadow(0 0 0.75em #9F9F9F);
         }
 
         .itemInstagram:hover {
-            transform: scale(1.1, 1.1);
-            background: linear-gradient(to right, #405DE6, #5B51D8, #833AB4, #C13584, #E1306C, #FD1D1D, #F56040, #F77737, #FCAF45, #FFDC80);
+            background: $corInstagram;
             filter: drop-shadow(0 0 0.75em #C13584);
-            color: #FFF;
-            font-size: 21px;
-            opacity: 100%;
-            transition: .5s;
         }
 
+        .itemLinkedIn:active,
+        .itemGitHub:active,
         .itemInstagram:active {
             transform: scale(0.9, 0.9);
         }
