--- a/styles.scss
+++ b/styles.scss
@@ -9,9 +9,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 80vh;
-    background-image: url('imgs/Fundo.png');
+    background-image: url('imgs/FundoPc.png');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto;
 
     header {
         display: flex;
@@ -104,55 +104,61 @@ body {
     }
 }
 
-@media only screen and (max-width: 600px) {
-    body {
-      height: 100vh;
-      
-      header {
-        #fotoPerfil {
-          height: 8rem;
-          width: 8rem;
-          margin-top: -120px;
-        }
-        
-        #username {
-          font-size: 24px;
-        }
-        
-        #descricao {
-          font-size: 16px;
-          margin-top: -30px;
-        }
+@media only screen and (max-width: 768px) {
+  body {
+    height: 80vh;
+    background-image: url('imgs/FundoPc.png');
+    background-repeat: no-repeat;
+    background-size: auto;
+    
+    header {
+      #fotoPerfil {
+        height: 8rem;
+        width: 8rem;
+        margin-top: -120px;
       }
       
-      .container {
-        margin-top: 20vh;
-        height: 50vh;
-        width: 90vw;
-        
-        .itemLinkedIn,
-        .itemGitHub,
-        .itemInstagram {
-          height: 8vh;
-          width: 80vw;
-          margin: 10px;
-          font-size: 16px;
-          border-radius: 2px;
-        }
-        
-        .itemLinkedIn:hover,
-        .itemGitHub:hover,
-        .itemInstagram:hover {
-          font-size: 18px;
-        }
+      #username {
+        font-size: 24px;
+      }
+      
+      #descricao {
+        font-size: 16px;
+        margin-top: -30px;
+      }
+    }
+    
+    .container {
+      margin-top: 20vh;
+      height: 50vh;
+      width: 90vw;
+      
+      .itemLinkedIn,
+      .itemGitHub,
+      .itemInstagram {
+        height: 8vh;
+        width: 80vw;
+        margin: 10px;
+        font-size: 16px;
+        border-radius: 2px;
+      }
+      
+      .itemLinkedIn:hover,
+      .itemGitHub:hover,
+      .itemInstagram:hover {
+        font-size: 18px;
       }
     }
   }
+}
 
-  @media only screen and (max-width: 768px) {
+@media only screen and (max-width: 600px) {
     body {
-      height: 100vh;
-      
+      height: 80vh;
+      background-image: url('imgs/FundoCelular.png');
+      background-repeat: no-repeat;
+      background-size: cover;
+    
       header {
         #fotoPerfil {
           height: 8rem;
