--- a/styles.scss
+++ b/styles.scss
@@ -11,7 +11,7 @@ body {
     height: 80vh;
     background-image: url('imgs/FundoPc.png');
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 
     header {
         display: flex;
