--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,15 @@ body header #descricao {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   filter: drop-shadow(0 0 0.75rem #202020);
 }
+body header #username::-moz-selection, body header #descricao::-moz-selection {
+  background-color: #405DE6;
+  color: #FFF;
+}
+body header #username::selection,
+body header #descricao::selection {
+  background-color: #405DE6;
+  color: #FFF;
+}
 body header #descricao {
   margin-top: -40px;
   margin-bottom: 40px;
@@ -70,14 +79,20 @@ body .container .itemInstagram:hover {
 }
 body .container .itemLinkedIn:hover {
   background: linear-gradient(to right, #0077B5, #00BBFF);
+  background-size: 200% 200%;
+  animation: onda ease 5s infinite;
   filter: drop-shadow(0 0 0.75em #00BBFF);
 }
 body .container .itemGitHub:hover {
   background: linear-gradient(to right, #211F1F, #9F9F9F);
+  background-size: 200% 200%;
+  animation: onda ease 5s infinite;
   filter: drop-shadow(0 0 0.75em #9F9F9F);
 }
 body .container .itemInstagram:hover {
   background: linear-gradient(to right, #405DE6, #5B51D8, #833AB4, #C13584, #E1306C, #FD1D1D, #F56040, #F77737, #FCAF45, #FFDC80);
+  background-size: 200% 200%;
+  animation: onda ease 5s infinite;
   filter: drop-shadow(0 0 0.75em #C13584);
 }
 body .container .itemLinkedIn:active,
@@ -162,5 +177,16 @@ body .container .itemInstagram:active {
   body .container .itemGitHub:hover,
   body .container .itemInstagram:hover {
     font-size: 18px;
+  }
+}
+@keyframes onda {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }/*# sourceMappingURL=styles.css.map */
