--- a/styles.scss
+++ b/styles.scss
@@ -9,7 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 80vh;
-  background-image: url('imgs/FundoPc.png');
+  background-image: url('imgs/FundoPC.png');
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -119,7 +119,7 @@ body {
 @media only screen and (max-width: 768px) {
   body {
     height: 80vh;
-    background-image: url('imgs/FundoPc.png');
+    background-image: url('imgs/FundoPC.png');
     background-repeat: no-repeat;
     background-size: auto;
 
