--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 body .container {
   margin-top: 200px;
-  margin-bottom: 300px;
+  margin-bottom: 600px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,7 +39,6 @@ body .container #cargo {
   font-size: 80px;
 }
 body .container #btnComecar {
-  margin-bottom: 200px;
   padding: 12px 36px;
   background-color: transparent;
   border: 2px solid #FFF;
@@ -77,12 +76,16 @@ body #container-repos {
   grid-row-end: 3;
   grid-template-columns: repeat(3, 1fr);
 }
+body .svg {
+  z-index: -1;
+}
 body .repositorio {
+  background-image: url(blob1.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
   margin-bottom: 200px;
   height: 300px;
   width: 400px;
-  background-color: rgba(4, 185, 73, 0.5019607843);
-  border-radius: 10px;
   color: #000;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400px;
@@ -149,7 +152,7 @@ body .repositorio .metodologiasAgeis:hover {
   font-size: 15px;
 }
 body #footer {
-  margin-top: 50px;
+  margin-top: 200px;
   margin-bottom: 50px;
   height: 5vh;
   background-color: #303030;
