--- a/Site/css/style.scss
+++ b/Site/css/style.scss
@@ -24,7 +24,7 @@ body {
 
     .container {
         margin-top: 200px;
-        margin-bottom: 300px;
+        margin-bottom: 600px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -53,7 +53,6 @@ body {
         }
 
         #btnComecar {
-            margin-bottom: 200px;
             padding: 12px 36px;
             background-color: transparent;
             border: 2px solid #FFF;
@@ -96,13 +95,16 @@ body {
         grid-template-columns: repeat(3, 1fr);
     }
 
-
+    .svg{
+        z-index: -1;
+    }
     .repositorio {
+        background-image: url(blob1.svg);
+        background-repeat: no-repeat;
+        background-size: cover;
         margin-bottom: 200px;
         height: 300px;
         width: 400px;
-        background-color: #04b94980;
-        border-radius: 10px;
 
         color: #000;
 
@@ -184,7 +186,7 @@ body {
     }
 
     #footer {
-        margin-top: 50px;
+        margin-top: 200px;
         margin-bottom: 50px;
         height: 5vh;
         background-color: #303030;
