--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ body .container .itemInstagram:active {
   transform: scale(0.9, 0.9);
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1000px) {
   body {
     height: 80vh;
     background-image: url("../imgs/FundoPadrao.png");
@@ -129,8 +129,7 @@ body .container .itemInstagram:active {
   body .container .itemLinkedIn,
   body .container .itemGitHub,
   body .container .itemInstagram {
-    height: 8vh;
-    width: 80vw;
+    padding: 10px 200px;
     margin: 10px;
     font-size: 16px;
     border-radius: 2px;
@@ -168,9 +167,8 @@ body .container .itemInstagram:active {
   body .container .itemLinkedIn,
   body .container .itemGitHub,
   body .container .itemInstagram {
-    height: 8vh;
-    width: 80vw;
-    margin: 10px;
+    padding: 20px 150px;
+    margin: 15px;
     font-size: 16px;
     border-radius: 2px;
   }
