--- a/css/style.scss
+++ b/css/style.scss
@@ -1,53 +1,34 @@
-$fontePadrao: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+$fontePadrao: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 $cinzaEscuroTexto: #525252;
-$corLinkedIn: linear-gradient(to right, #0077B5, #00BBFF);
-$corGitHub: linear-gradient(to right, #211F1F, #9F9F9F);
-$corInstagram: linear-gradient(to right, #405DE6, #5B51D8, #833AB4, #C13584, #E1306C, #FD1D1D, #F56040, #F77737, #FCAF45, #FFDC80);
+$corLinkedIn: linear-gradient(to right, #0077b5, #00bbff);
+$corGitHub: linear-gradient(to right, #211f1f, #9f9f9f);
+$corInstagram: linear-gradient(
+  to right,
+  #405de6,
+  #5b51d8,
+  #833ab4,
+  #c13584,
+  #e1306c,
+  #fd1d1d,
+  #f56040,
+  #f77737,
+  #fcaf45,
+  #ffdc80
+);
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
-  background-image: url('../imgs/FundoPadrao.png');
+  height: 115vh;
+  background-image: url("../imgs/FundoPadrao.png");
+  background-color: #0077b5;
   background-repeat: no-repeat;
   background-size: cover;
 
-  header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    #fotoPerfil {
-      border-radius: 50%;
-      height: 10rem;
-      width: 10rem;
-      margin-top: -180px;
-    }
-
-    #username,
-    #descricao {
-      text-align: center;
-      color: #FFF;
-      font-family: $fontePadrao;
-      filter: drop-shadow(0 0 0.75rem #202020);
-    }
-
-    #username::selection,
-    #descricao::selection {
-      background-color: #405DE6;
-      color: #FFF;
-    }
-
-    #descricao {
-      margin-top: -40px;
-      margin-bottom: 40px;
-    }
-  }
-
   .container {
-    margin-top: 40vh;
+    margin-top: 350px;
     display: grid;
     grid-template-columns: 1;
     grid-template-rows: 3;
@@ -57,6 +38,39 @@ body {
 
     a {
       text-decoration: none;
+    }
+
+    header {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      #fotoPerfil {
+        border-radius: 50%;
+        height: 10rem;
+        width: 10rem;
+        margin-top: -180px;
+      }
+
+      #username,
+      #descricao {
+        text-align: center;
+        color: #fff;
+        font-family: $fontePadrao;
+        filter: drop-shadow(0 0 0.75rem #202020);
+      }
+
+      #username::selection,
+      #descricao::selection {
+        background-color: #405de6;
+        color: #fff;
+      }
+
+      #descricao {
+        margin-top: -40px;
+        margin-bottom: 40px;
+      }
     }
 
     .itemLinkedIn,
@@ -74,8 +88,8 @@ body {
       font-family: $fontePadrao;
       font-size: 20px;
       font-weight: 600;
-      transition: .5s;
-      background-color: #FFF;
+      transition: 0.5s;
+      background-color: #fff;
     }
 
     .itemLinkedIn:hover,
@@ -84,29 +98,29 @@ body {
       transform: scale(1.1, 1.1);
       font-size: 21px;
       opacity: 100%;
-      transition: .5s;
-      color: #FFF;
+      transition: 0.5s;
+      color: #fff;
     }
 
     .itemLinkedIn:hover {
       background: $corLinkedIn;
       background-size: 200% 200%;
       animation: onda ease 5s infinite;
-      filter: drop-shadow(0 0 0.75em #00BBFF);
+      filter: drop-shadow(0 0 0.75em #00bbff);
     }
 
     .itemGitHub:hover {
       background: $corGitHub;
       background-size: 200% 200%;
       animation: onda ease 5s infinite;
-      filter: drop-shadow(0 0 0.75em #9F9F9F);
+      filter: drop-shadow(0 0 0.75em #9f9f9f);
     }
 
     .itemInstagram:hover {
       background: $corInstagram;
       background-size: 200% 200%;
       animation: onda ease 5s infinite;
-      filter: drop-shadow(0 0 0.75em #C13584);
+      filter: drop-shadow(0 0 0.75em #c13584);
     }
 
     .itemLinkedIn:active,
@@ -115,14 +129,67 @@ body {
       transform: scale(0.9, 0.9);
     }
   }
+
+  .card {
+    margin: auto;
+    margin-top: 10px;
+    width: 80%;
+    width: 340px;
+    height: 350px;
+    padding: 0 15px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 12px;
+    background: transparent;
+    border-radius: 20px;
+  }
+
+  .card > * {
+    margin: 0;
+  }
+
+  .tituloCard {
+    font-family: $fontePadrao;
+    font-size: 23px;
+    font-weight: 900;
+    color: #fff;
+    filter: drop-shadow(0 0 0.9rem #000);
+  }
+
+  .conteudoCard {
+    font-family: $fontePadrao;
+    font-size: 15px;
+    line-height: 18px;
+    color: #fff;
+    margin-bottom: 15px;
+    filter: drop-shadow(0 0 0.9rem #000);
+  }
+
+  .btnAssinar {
+    border: 0;
+    padding: 10px 30px;
+    border-radius: 14px;
+    transition: 0.5s;
+  }
+
+  .btnAssinar:hover {
+    transform: scale(1.1, 1.1);
+    border: 1px solid #fff;
+    background-color: transparent;
+    color: #fff;
+    transition: 0.5s;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
   body {
-    height: 80vh;
-    background-image: url('../imgs/FundoPadrao.png');
+    height: 160vh;
+    background-image: url("../imgs/FundoPadrao.png");
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 
     header {
       #fotoPerfil {
@@ -166,32 +233,32 @@ body {
 
 @media only screen and (max-width: 600px) {
   body {
-    height: 80vh;
-    background-image: url('../imgs/FundoCelular.png');
+    height: 135vh;
+    background-image: url("../imgs/FundoCelular.png");
     background-repeat: no-repeat;
     background-size: cover;
-
-    header {
-      #fotoPerfil {
-        height: 8rem;
-        width: 8rem;
-        margin-top: -120px;
-      }
-
-      #username {
-        font-size: 24px;
-      }
-
-      #descricao {
-        font-size: 16px;
-        margin-top: -30px;
-      }
-    }
 
     .container {
       margin-top: 20vh;
       height: 50vh;
       width: 90vw;
+
+      header {
+        #fotoPerfil {
+          height: 8rem;
+          width: 8rem;
+          margin-top: -120px;
+        }
+
+        #username {
+          font-size: 24px;
+        }
+
+        #descricao {
+          font-size: 16px;
+          margin-top: -30px;
+        }
+      }
 
       .itemLinkedIn,
       .itemGitHub,
@@ -223,4 +290,22 @@ body {
   100% {
     background-position: 0% 50%;
   }
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #FFF;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #008fdb;
+  border-radius: 10px;
+  border: 2px solid #FFF;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #0077b5;
 }
